kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    name: jenkins
spec:
  ports:
   - name: https
     port: 443
     targetPort: 10443
  selector:
    name: jenkins
