kube/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-ingress
spec:
  podSelector:
    matchLabels:
      name: jenkins
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-internal
    - podSelector:
        matchLabels:
          name: ingress
    ports:
    - protocol: TCP
      port: 10443
  policyTypes:
  - Ingress
